--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ server.port=8088
 
 
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
-spring.datasource.username=system
-spring.datasource.password=tushar123
+spring.datasource.username=js006
+spring.datasource.password=1234
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
 # JPA / Hibernate settings
